<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SqlLite_Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="email">Email Id</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="show">Show</string>
    <string name="delete">Delete</string>

</resources>