<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="5dp" >

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/address"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="18sp" >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/show"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/show"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/delete"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/show_saved_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:divider="#ff00"
        android:dividerHeight="1dp"
        android:visibility="gone" >
    </ListView>

</LinearLayout>